2010-06-15  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac (BOOST_REQUIRE): Require boost >= 1.41.

2010-06-14  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* m4/boost.m4: Updating to version currently used in dlvhex trunk.

	* configure.ac (AC_INIT): Bump version to 1.7.0.

	* Makefile.am (AUTOMAKE_OPTIONS): Add check-news.

	* examples/Makefile.am: Add shop-inconsistent-small test case.
	* examples/tests/shop-inconsistent-small.out: Likewise.
	* examples/shop-inconsistent-small.dlp: Likewise.
	* examples/mytests.test: Likewise.

2010-06-11  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* TODO: Update.

	* include/RacerExtAtom.tcc: Improve error message.

	* src/HexDLParser.ypp: Remove.
	* src/HexDLScanner.lpp: Likewise.
	* src/Makefile.am (MAINTAINERCLEANFILES, EXTRA_DIST): Likewise.

	* src/DFProcessor.cpp: Add comment.

	* include/DFProcessor.h: Fix Spirit.Classic deprecation warnings.
	* src/DFConverter.cpp: Likewise.

2010-06-10  Peter Schueller  <ps@kr.tuwien.ac.at>

	* configure.ac: Disallowing boost 1.41 as it is broken.

	* include/Makefile.am: Managing headers for make distcheck.

	* src/stack.hh: Removing autogenerated bison and flex parsers again,
	as flex/bison is no longer used.
	* src/location.hh: Likewise.
	* src/position.hh:Likewise.
	* src/RacerAnswerScanner.cpp: Likewise.
	* src/RacerAnswerParser.output: Likewise.
	* src/RacerAnswerParser.hpp: Likewise.
	* src/RacerAnswerParser.cpp: Likewise.
	* src/HexDLScanner.cpp: Likewise.
	* src/HexDLParser.output: Likewise.
	* src/HexDLParser.hpp: Likewise.
	* src/HexDLParser.cpp: Likewise.
	* src/FlexLexer.h: Likewise.

	* include/HexDLRewriter.h: Replaced flex/bison parsers by
	boost spirit V2 parser, including several new test cases.
	* include/RacerInterface.h: Likewise.
	* include/RacerAnswerDriver.h: Likewise.
	* include/HexDLConverter.h: Likewise (new file).
	* src/RacerInterface.cpp: Likewise.
	* src/RacerAnswerDriver.cpp: Likewise.
	* src/RacerKBManager.cpp: Likewise.